Реализован функцианал удалённого вызова процедур(RPC).

--- a/telemetry/collector/src/main/resources/application.properties
+++ b/telemetry/collector/src/main/resources/application.properties
@@ -3,3 +3,8 @@ kafka.property.key-serializer-class = org.apache.kafka.common.serialization.Stri
 kafka.property.value-serializer-class = ru.yandex.practicum.kafka.serializer.KafkaCollectorSerializer
 kafka.property.name-topic-hub = telemetry.hubs.v1
 kafka.property.name-topic-sensor = telemetry.sensors.v1
+
+logging.level.org.springframework.kafka=INFO
+logging.level.ru.yandex.practicum.telemetry=TRACE
+
+grpc.server.port=59091
