--- a/telemetry/collector/pom.xml
+++ b/telemetry/collector/pom.xml
@@ -19,6 +19,11 @@
         </dependency>
         <dependency>
             <groupId>ru.yandex.practicum</groupId>
+            <artifactId>proto-schemas</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>ru.yandex.practicum</groupId>
             <artifactId>util</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
@@ -42,6 +47,11 @@
         <dependency>
             <groupId>org.apache.kafka</groupId>
             <artifactId>kafka-clients</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>net.devh</groupId>
+            <artifactId>grpc-server-spring-boot-starter</artifactId>
+            <version>3.1.0.RELEASE</version>
         </dependency>
     </dependencies>
 
