--- a/telemetry/collector/src/main/resources/application.properties
+++ b/telemetry/collector/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 kafka.property.bootstrap-servers = localhost:9092
 kafka.property.key-serializer-class = org.apache.kafka.common.serialization.StringSerializer
-kafka.property.value-serializer-class = ru.yandex.practicum.kafka.serializer.KafkaCollectorSerializer
+kafka.property.value-serializer-class = ru.yandex.practicum.kafka.serializer.SerializerAvro
 kafka.property.name-topic-hub = telemetry.hubs.v1
 kafka.property.name-topic-sensor = telemetry.sensors.v1
 
