--- a/telemetry/pom.xml
+++ b/telemetry/pom.xml
@@ -16,6 +16,7 @@
         <module>serialization</module>
         <module>collector</module>
         <module>util</module>
+        <module>aggregator</module>
     </modules>
 
 </project>
