Реализован analyzer. В тестах не проходит одна ошибка, gRPC обрабатывает с опозданием.

--- a/telemetry/aggregator/src/main/resources/application.properties
+++ b/telemetry/aggregator/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 # Consumer
 kafka.consumer.bootstrap-servers = localhost:9092
 kafka.consumer.key-deserializer-class = org.apache.kafka.common.serialization.StringDeserializer
-kafka.consumer.value-deserializer-class = ru.yandex.practicum.kafka.serializer.SensorEventDeserializer
+kafka.consumer.value-deserializer-class = ru.yandex.practicum.kafka.deserializer.SensorEventDeserializer
 kafka.consumer.group-id = sensorEvent.group.id
 kafka.consumer.client-id = SensorEventConsumer
 kafka.consumer.enable-auto-commit = false
