Добавлен сервер конфигураций и система обнаружения сервисов.

--- a/telemetry/pom.xml
+++ b/telemetry/pom.xml
@@ -20,4 +20,16 @@
         <module>analyzer</module>
     </modules>
 
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>org.springframework.cloud</groupId>
+                <artifactId>spring-cloud-dependencies</artifactId>
+                <version>2023.0.3</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
+
 </project>
