--- a/infra/config-server/src/main/resources/application.yaml
+++ b/infra/config-server/src/main/resources/application.yaml
@@ -8,6 +8,7 @@ spring:
       server:
         native:
           searchLocations:
+            - classpath:config/commerce/{application}
             - classpath:config/telemetry/{application}
 server:
   port: 8888
