--- a/commerce/shopping-cart/pom.xml
+++ b/commerce/shopping-cart/pom.xml
@@ -78,7 +78,15 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>repackage</goal>
+                        </goals>
+                    </execution>
+                </executions>
                 <configuration>
+                    <mainClass>ru.yandex.practicum.CartMain</mainClass>
                     <excludes>
                         <exclude>
                             <groupId>org.projectlombok</groupId>
