--- a/commerce/shopping-store/pom.xml
+++ b/commerce/shopping-store/pom.xml
@@ -77,7 +77,15 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>repackage</goal>
+                        </goals>
+                    </execution>
+                </executions>
                 <configuration>
+                    <mainClass>ru.yandex.practicum.StoreMain</mainClass>
                     <excludes>
                         <exclude>
                             <groupId>org.projectlombok</groupId>
