--- a/commerce/pom.xml
+++ b/commerce/pom.xml
@@ -17,5 +17,8 @@
         <module>shopping-cart</module>
         <module>shopping-store</module>
         <module>warehouse</module>
+        <module>delivery</module>
+        <module>order</module>
+        <module>payment</module>
     </modules>
 </project>
