--- a/infra/config-server/src/main/resources/application.yaml
+++ b/infra/config-server/src/main/resources/application.yaml
@@ -10,6 +10,7 @@ spring:
           searchLocations:
             - classpath:config/commerce/{application}
             - classpath:config/telemetry/{application}
+            - classpath:config/infra/{application}
 server:
   port: 8888
 
